# coldforge

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
coldforge/: __init__.py  __main__.py  cli.py  config.py  db.py  deliverability.py  mcp_server.py  models.py  personalize.py  research.py  sender.py  sequence.py  templates.py
coldforge/templates/: README.md
coldforge/templates/follow-up/: no-reply-bump.md
coldforge/templates/networking/: curiosity.md
coldforge/templates/partnership/: integration-proposal.md
coldforge/templates/recruiting/: founder-hire.md  passive-candidate.md
coldforge/templates/sales/: founder-direct.md  pain-point.md  peer-result.md
coldforge/templates/warm-intro/: mutual-connection.md
examples/: leads.csv  sequence.yml
tests/: test_core.py
