[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coldforge"
version = "0.1.0"
description = "Honest, local-first cold outreach toolkit: research → personalize → sequence → send → follow. CLI + MCP, no SaaS required."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Aurore Biakou" }]
keywords = ["cold-email", "outreach", "prospecting", "mcp", "sales", "recruiting"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Office/Business",
]

# Core stays tiny and pure-stdlib-friendly. Everything else is an opt-in extra
# so the tool runs end-to-end (research + draft + send + follow) with zero paid
# API keys and degrades gracefully when an extra is missing.
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pyyaml>=6.0",
    "requests>=2.31",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]          # real Claude personalization (falls back to template fill)
mcp = ["mcp>=1.2"]                # expose research_prospect / draft_email to Claude
dns = ["dnspython>=2.6"]          # SPF/DKIM/DMARC checks without DNS-over-HTTPS
dev = ["pytest>=8.0", "ruff>=0.6"]
all = ["anthropic>=0.40", "mcp>=1.2", "dnspython>=2.6"]

[project.urls]
Homepage = "https://github.com/Makeph/coldforge"
Repository = "https://github.com/Makeph/coldforge"

[project.scripts]
coldforge = "coldforge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["coldforge"]

[tool.hatch.build.targets.wheel.force-include]
"coldforge/templates" = "coldforge/templates"

[tool.ruff]
line-length = 100
target-version = "py310"
